sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: missing arguments for method plusPetit in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
    if(plusPetit(i+1,i)=true){
       ^AlgGnomeSort:7: error: not found: value i
    if(plusPetit(i+1,i)=true){
                 ^AlgGnomeSort:7: error: not found: value i
    if(plusPetit(i+1,i)=true){
                     ^AlgGnomeSort:8: error: not found: value i
      echange(i+1,i)
              ^AlgGnomeSort:8: error: not found: value i
      echange(i+1,i)
                  ^AlgGnomeSort:9: error: not found: value i
      if (i=0){
          ^AlgGnomeSort:10: error: not found: value i
        i=i+1
        ^AlgGnomeSort:12: error: not found: value i
        i=i-1
        ^AlgGnomeSort:15: error: not found: value i
      if (i==lgr-2){
          ^AlgGnomeSort:18: error: not found: value i
        i=i+1
        ^